# Beets-Plugin_VGMdb

./: CHANGELOG.MD  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml
beetsplug/: VGMCollection.py  VGMplug.py
tests/fixtures/: vgm_collection.json
